--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       if (/android/i.test(userAgent)) {
         // 👉 Replace with your actual Play Store link
-        window.location.href = "hhttps://play.google.com/store/apps/details?id=com.bitebusiness.flappysfriedchicken&pcampaignid=web_share";
+        window.location.href = "https://play.google.com/store/apps/details?id=com.bitebusiness.flappysfriedchicken&pcampaignid=web_share";
       } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
         // 👉 Replace with your actual App Store link
         window.location.href = "https://apps.apple.com/au/app/flappys-fried-chicken/id6670198182";
